--- a/serverless.yml
+++ b/serverless.yml
@@ -17,10 +17,13 @@ provider:
 functions:
   hello:
     handler: handler.hello
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
     events:
       - http:
           path: hello
+          method: get
+  load:
+    handler: loader.load
+    events:
+      - http:
+          path: load
           method: get
